# rust-boids

./: Cargo.toml  justfile
.github/workflows/: CI.yaml  release.yaml
src/: main.rs
