[package]
name = "rust-boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_egui = "0.20"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[profile.release-wasm]
inherits = "release"
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
